--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-hooray.
+<!DOCTYPE html>
+<html>
+<body>
+
+<p>Click the button to get your coordinates, location and weather.</p>
+
+<button onclick="getLocation()">Try It</button>
+
+<p id="coordinates"></p>
+<p id="location"></p>
+<p id="weather"></p>
+
+<script>
+var getJSON = function(url, callback) {
+    var xhr = new XMLHttpRequest();
+    xhr.open('GET', url, true);
+    xhr.responseType = 'json';
+    xhr.onload = function() {
+      var status = xhr.status;
+      if (status == 200) {
+        callback(null, xhr.response);
+      } else {
+        callback(status);
+      }
+    };
+    xhr.send();
+};
+
+var coordinates = document.getElementById('coordinates'),
+    loc = document.getElementById('location'),
+    weather = document.getElementById('weather'),
+    wundergroundKey = '96de6938d4ddb24b';
+
+function getLocation() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+
+    } else { 
+        coordinates.innerHTML = 'Geolocation is not supported by this browser.';
+    }
+}
+
+function getWeather(position) {
+    console.info('position', position);
+    
+    getJSON('http://api.wunderground.com/api/' + wundergroundKey + '/conditions/forecast/q/' + position.coords.latitude + ',' + position.coords.longitude + '.json',
+    // getJSON('http://api.wunderground.com/api/96de6938d4ddb24b/geolookup/q/' + position.coords.latitude + ',' + position.coords.longitude + '.json',
+        function(err, data) {
+            if (err == null) {
+                console.info('data', data);
+                loc.innerHTML = 'City: ' + data.current_observation.display_location.city +
+                    '<br>Country: ' + data.current_observation.display_location.country;
+                weather.innerHTML = 'Weather: ' + data.current_observation.weather +
+                    '<br>Temperature: ' + data.current_observation.temp_c + ' C' +
+                    '<br>Humidity: ' + data.current_observation.relative_humidity +
+                    '<br>Icon: <img src="' + data.current_observation.icon_url + '" alt="' + data.current_observation.icon + '" />';
+            } else {
+                loc.innerHTML = 'Getting weather from API - something went wrong: ' + err;
+            }
+        }
+    );
+}
+
+function showPosition(position) {
+    coordinates.innerHTML = 'Latitude: ' + position.coords.latitude + 
+        '<br>Longitude: ' + position.coords.longitude;
+
+    getWeather(position);
+}
+</script>
+
+</body>
+</html>
